Fixes AB#702: Focus ring not visible
...when tab order reaches table for the first time without interacting with the table using the arrow keys

--- a/src/@batch-flask/ui/table/table.scss
+++ b/src/@batch-flask/ui/table/table.scss
@@ -102,6 +102,11 @@ bl-table {
             }
         }
 
+        &.focused {
+            outline: 1px dashed $primary-color;
+            outline-offset: -2px;
+        }
+
         &.focused.selected {
             outline: 1px dashed $primary-contrast-color;
             outline-offset: -2px;
